--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
             }
     
             nav {
-                margin-top: 30px; 
+                margin-top: 20px; 
+                margin-bottom: 10px;
+                text-align: center;
             }
     
             nav a {
